--- a/package.json
+++ b/package.json
@@ -7,13 +7,10 @@
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "form-data": "^4.0.0",
     "google-auth-library": "^7.3.0",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.0.1",
-    "multer": "^1.4.2"
+    "mongodb": "^4.0.1"
   },
   "devDependencies": {
     "jest": "^27.0.6",
